# device-manager

./: .gitignore  .travis.yml  DBusAbstraction.hs  LICENSE  Main.hs  Notifications.hs  README.md  UDisks.hs  devicemanager.cabal  stack.yaml
lib/DBus/: DBusAbstraction.hs  UDisks2.hs
lib/DBus/UDisks2/: Internal.hs  Simple.hs  Types.hs
lib/Data/Config/: Parser.hs
src/: Common.hs  ErrorLogger.hs  Main.hs  MainBrick.hs  Notifications.hs  UDisks2Main.hs
src/Brick/Widgets/: DeviceList.hs  HelpMessage.hs  WrappedText.hs
src/Brick/Widgets/List/: Utils.hs
src/DBus/: DBusAbstraction.hs  UDisks.hs  UDisks2.hs
src/DBus/UDisks/: Types.hs
src/DBus/UDisks2/: Internal.hs  Operations.hs  Simple.hs  Types.hs
src/Graphics/Vty/Widgets/: ColumnList.hs
test/: ConfigParserTest.hs  ConversionTest.hs  TestDriver.hs
