Name:                devicemanager
Version:             0.1.0
Synopsis:            Interfaces to the UDisks daemon
License:             BSD3
License-File:        LICENSE
Author:              Hans-Peter Deifel <hpdeifel@gmx.de>
Maintainer:          Hans-Peter Deifel <hpdeifel@gmx.de>
Category:            System
Build-Type:          Simple
Cabal-Version:       >=1.8
                     
-- TODO Complete Other-modules list

Flag udisks2
  Description: Build experimental udisks2 support
  Default: True

Executable devman
  if flag(udisks2)
    Buildable: False
  Main-Is:             Main.hs
  Other-modules:       DBus.UDisks.Types
  Build-Depends:       base >=4.6 && <4.9,
                       dbus ==0.10.*,
                       containers ==0.5.*,
                       process >=1.1 && <1.3,
                       vty-ui >=1.8 && <1.10,
                       vty >=5.2 && <5.3,
                       text >=0.11 && <1.3,
                       vector ==0.10.*,
                       bytestring >= 0.10 && <0.11
  Ghc-Options:         -threaded
  Hs-Source-Dirs:      src

Executable devnotify
  if flag(udisks2)
    Buildable: False
  Main-Is:             Notifications.hs
  Other-modules:       DBus.UDisks.Types
  Build-Depends:       base >=4.6 && <4.9,
                       dbus ==0.10.*,
                       containers ==0.5.*,
                       process >=1.1 && <1.3,
                       text >=0.11 && <1.3
  Hs-Source-Dirs:      src

Executable udisks2test
  if !flag(udisks2)
    Buildable: False
  Hs-Source-Dirs:      src
  Build-Depends:       base >=4.6 && <4.9,
                       dbus ==0.10.*,
                       text >=0.11 && <1.3,
                       bytestring >= 0.10 && <0.11,
                       vector ==0.10.*,
                       containers ==0.5.*,
                       transformers ==0.4.*,
                       lens ==4.12.*,
                       stm ==2.4.*,
                       mtl ==2.2.*
  Main-Is:             UDisks2Main.hs
  Other-Modules:       DBus.UDisks.Types,
                       DBus.DBusAbstraction,
                       DBus.UDisks2
