Name:                devicemanager
Version:             0.1.0
Synopsis:            Interfaces to the UDisks daemon
License:             BSD3
License-File:        LICENSE
Author:              Hans-Peter Deifel <hpdeifel@gmx.de>
Maintainer:          Hans-Peter Deifel <hpdeifel@gmx.de>
Category:            System
Build-Type:          Simple
Cabal-Version:       >=1.8

library
  hs-source-dirs:      lib
  exposed-modules:     DBus.UDisks2.Types
                     , DBus.UDisks2
                     , DBus.UDisks2.Simple
                     , DBus.UDisks2.Operations
                     , DBus.UDisks2.Internal
                     , DBus.DBusAbstraction
  build-depends:       base >=4.6 && <4.9
                     , dbus ==0.10.*
                     , text >=0.11 && <1.3
                     , bytestring >= 0.10 && <0.11
                     , vector ==0.10.*
                     , containers ==0.5.*
                     , transformers ==0.4.*
                     , lens ==4.12.*
                     , stm ==2.4.*
                     , mtl ==2.2.*

                     
Executable devman
  Main-Is:             Main.hs
  Other-Modules:       Brick.Widgets.DeviceList,
                       Brick.Widgets.List.Utils,
                       Brick.Widgets.HelpMessage
  Build-Depends:       base >=4.6 && <4.9,
                       devicemanager,
                       text >=0.11 && <1.3,
                       vector ==0.10.*,
                       containers ==0.5.*,
                       transformers ==0.4.*,
                       lens ==4.12.*,
                       brick ==0.2.*,
                       vty ==5.4.*,
                       data-default ==0.5.*
  Ghc-Options:         -threaded
  Hs-Source-Dirs:      src

Executable devnotify
  Main-Is:             Notifications.hs
  Build-Depends:       base >=4.6 && <4.9,
                       devicemanager,
                       dbus ==0.10.*,
                       containers ==0.5.*,
                       process >=1.1 && <1.3,
                       text >=0.11 && <1.3
  Hs-Source-Dirs:      src

test-suite devicemanager-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestDriver.hs
  build-depends:       base
                     , devicemanager
                     , tasty
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/rootzlevel/device-manager
