Name:                devicemanager
Version:             0.1.0
Synopsis:            Interfaces to the UDisks daemon
License:             BSD3
License-File:        LICENSE
Author:              Hans-Peter Deifel <hpdeifel@gmx.de>
Maintainer:          Hans-Peter Deifel <hpdeifel@gmx.de>
Category:            System
Build-Type:          Simple
Cabal-Version:       >=1.10

library
  hs-source-dirs:      lib
  exposed-modules:     DBus.UDisks2.Types
                     , DBus.UDisks2
                     , DBus.UDisks2.Simple
                     , DBus.UDisks2.Operations
                     , DBus.UDisks2.Internal
                     , DBus.DBusAbstraction
                     , Data.Config.Parser
  build-depends:       base >=4.6 && <5
                     , dbus ==0.10.*
                     , text >=0.11 && <1.3
                     , bytestring >= 0.10 && <0.11
                     , vector >=0.10
                     , containers ==0.5.*
                     , transformers >=0.4 && <0.6
                     , lens >=4.12
                     , stm ==2.4.*
                     , mtl ==2.2.*
                     , parsec >=3.1.2 && <3.2
  default-language:    Haskell2010

                     
Executable devman
  Main-Is:             Main.hs
  Other-Modules:       Brick.Widgets.DeviceList,
                       Brick.Widgets.List.Utils,
                       Brick.Widgets.HelpMessage
                       Brick.Widgets.WrappedText
  Build-Depends:       base >=4.6 && <5,
                       devicemanager,
                       text >=0.11 && <1.3,
                       vector >=0.10,
                       containers ==0.5.*,
                       transformers >=0.4 && <0.6,
                       lens >=4.12,
                       brick >=0.29,
                       vty >=5.19,
                       unix ==2.7.*,
                       process >=1.1
  Ghc-Options:         -threaded
  default-language:    Haskell2010
  Hs-Source-Dirs:      src

Executable devnotify
  Main-Is:             Notifications.hs
  Build-Depends:       base >=4.6 && <5,
                       devicemanager,
                       dbus ==0.10.*,
                       containers ==0.5.*,
                       process >=1.1,
                       text >=0.11 && <1.3
  default-language:    Haskell2010
  Hs-Source-Dirs:      src

test-suite devicemanager-tests
  type:                exitcode-stdio-1.0
  hs-source-dirs:      test
  main-is:             TestDriver.hs
  other-modules:       ConversionTest
                     , ConfigParserTest
  build-depends:       base
                     , devicemanager
                     , tasty
                     , tasty-hunit
                     , text
  default-language:    Haskell2010

source-repository head
  type:                git
  location:            https://github.com/rootzlevel/device-manager
